@@ -1,0 +1,19 @@
+.PHONY: clean single cheap medium all
+
+all:
+	./run-all.sh all
+
+clean:
+	./clean.sh
+
+single:
+	./run-all.sh single hydrogen_1S_2P0_uniform.inp
+
+cheap:
+	./run-all.sh cheap
+
+medium:
+	./run-all.sh medium
+
+all:
+	./run-all.sh all
